frontend/src/App.css
/* ... */
#firstmessage {
  width: 500px;
  height: 60px;
}

.editdelwrapper {
}

.edit {
  /* width: 50px;
  height: 50px; */
}

.groupinfo {
  word-wrap: break-word;
  display: flex;
  flex-direction: column;
  justify-content: center;
  max-width: 50vw;
}

.chatmenu {
  height: 15vh;
  width: 100%;
  border-bottom: 1px solid black;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 20px;
  padding-left: 5%;
  padding-right: 5%;
  position: sticky;
  top: 0;
  left: 0;
  z-index: 10;
}

.chatmenutop {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-left: 10%;
}

.searchbar {
  width: 100px;
  height: 25px;
}

.textmessage {
  word-wrap: break-word;
  padding-bottom: 5px;
}

.chatmenubot {
  width: 100%;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.mid {
  border-right: 3px solid black;
  height: 100vh;
  width: 15vw;
  min-width: 320px;
  color: black;
  background-color: white;
}

.overflowdiv {
  overflow-y: scroll;
  height: 85vh;
}

.wrap {
  border-bottom: 1px solid black;
  display: grid;
  grid-template-columns: 1fr 6fr 11fr 3fr 2fr;
  /* justify-content: space-between;
  align-items: center; */
  justify-items: start;
  align-items: center;
  height: 100px;
  cursor: pointer;
  position: relative;
}
.chatinfotop {
  height: 10%;
  width: 100%;
  /* position: sticky; */
  display: flex;
  gap: 10px;
  padding: 20px;
  align-items: center;
  border-bottom: 2px solid black;
  justify-content: space-between;
}

.collrightsvg {
  position: absolute;
  top: 0px;
  left: 0px;
}

.collleft {
  display: flex;
  justify-content: flex-end;
  display: none;
  position: absolute;
  top: 0px;
  right: 0px;
}

.collright {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  display: none;
  position: relative;
}

.profcollright {
  position: absolute;
  left: 10px;
  top: 20px;
  width: 30px;
  height: 30px;
  /* background-color: white; */
  /* display: flex;
  justify-content: center;
  align-items: center; */
  display: none;
}

.wrap:hover {
  background-color: blue;
  color: white;
}

.messagebox {
  height: 100vh;
  width: min(80vw, calc(95vw - 320px));
  position: relative;
  display: flex;
  flex-direction: column;
  color: black;
  background-color: white;
  /* min-width: 500px; */
  /* overflow: hidden; */
}

.profile {
  height: 100vh;
  width: min(80vw, calc(95vw - 320px));
  position: relative;
  display: flex;
  flex-direction: column;
  gap: 2vh;
  color: black;
  background-color: white;
  /* padding: 0 10vw; */
  /* overflow: hidden; */
}

#entermessage {
  width: 60vw;
  height: 70%;
  display: flex;
  margin: auto;
  margin: 0 10px;
}

.grouped,
.chatdeletediv {
  display: flex;
  gap: 50px;
}

.buttonsmobile {
  display: flex;
  gap: 20px;
}

.row {
  display: flex;
  gap: 30px;
  align-items: center;
}

.newchatrow {
  display: flex;
  gap: 10px;
  align-items: center;
}

.col {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.messagemasterwrapper {
  /* display: flex;
  flex-direction: column;
  justify-content: end; */
  /* display: grid;
  grid-template-rows: 1fr;
  align-items: end; */
  width: 100%;
  height: 83%;
  overflow-y: scroll;
}

.topbuttons {
  /* margin-left: 80%; */
  display: flex;
  gap: 30px;
}

.messagewrapper {
  width: 100%;
}

/* .daywrapper {
  display: flex;
  justify-content: center;
  align-items: center;
} */

.border {
  border-top: 1px solid black;
  border-bottom: 1px solid black;
  width: 100%;
  text-align: center;
}

.grid {
  width: 80%;
  height: 50%;
  display: grid;
  grid-template-columns: repeat(auto-fit, 200px);
  padding: 30px;
  grid-gap: 10px;
  overflow-y: scroll;
}

.useravatarwrapper {
  max-width: 300px;
}

svg {
  cursor: pointer;
}

.message {
  display: flex;
  gap: 10px;
  margin: 10px;
  padding: 0 20px;
  justify-content: start;
  align-items: center;
}

#image,
#background,
#avatar {
  display: none;
}

.imgcontainer {
  height: 100vh;
  width: min(80vw, calc(95vw - 320px));
  display: flex;
  justify-content: center;
  align-items: center;
  /* background-image: url("https://images.unsplash.com/photo-1548620848-d375c7919ea2?q=80&w=2669&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
  background-size: cover; */
}

.message.right {
  justify-content: end;
}

.azure {
  background-color: rgb(220, 255, 255);
  border-radius: 18px;
  padding: 8px 12px;
  max-width: 50vw;
  margin: 2px 0;
}

.imgmessage {
  padding: 10px 20px;
}

.imgmessage img {
  max-width: 50vw;
  max-height: 50vh;
  object-fit: cover;
  border-radius: 12px;
}

.smallgap {
  display: flex;
  gap: 20px;
  padding-right: 1vw;
}

.mobile {
  display: none;
}

.profbuttons {
  display: flex;
  justify-content: space-between;
}

.biodiv textarea {
  max-height: 5vh;
}

.chatinfo {
  /* position: absolute;
  top: 25%;
  left: 25%; */
  grid-area: 1 / 3 / 1 / 4;
  display: flex;
  flex-direction: column;
  align-items: left;
  justify-content: left;
}

.closeprof {
  position: absolute;
  right: 40px;
  top: 10px;
  z-index: 2;
  width: 30px;
  height: 30px;
  /* background-image: url("https://plus.unsplash.com/premium_photo-1723587567569-0545a68c6b54?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"); */
}

.avatar {
  min-width: 70px;
  min-height: 70px;
  border-radius: 50%;
  border: 3px solid black;
  background-color: white;
  /* background-image: url("https://steamuserimages-a.akamaihd.net/ugc/2492254803012160630/33FDDE88D49A58AF9C263ED4354B43193F50903A/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false"); */
  background-size: cover;
  background-repeat: no-repeat;
  cursor: pointer;
}

.form input {
  height: 30px;
  width: 300px;
}

.whiteborder {
  border-color: white;
}
/* ... */

